# learn-opengl

./: .gitignore  CMakeLists.txt  cube_frag.glsl  vert.glsl
src/: camera.cpp  camera.h  main.cpp  shader.cpp
src/glad/: glad.c  glad.h
